First working implementation of hypermedia paging
